--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "sequelize": "6.32.1",
     "sqlite3": "5.1.6"
   }
